# proc-macro-workshop

./: .gitignore  Cargo.toml
builder/: Cargo.toml
builder/src/: field.rs  generator.rs  lib.rs  setter.rs  test.rs
debug/: .vimrc  Cargo.toml
debug/src/: debug.rs  field.rs  fields.rs  generic.rs  generics.rs  lib.rs
seq/: .vimrc  Cargo.toml
seq/src/: body.rs  bodys.rs  compiler.rs  lib.rs  part.rs  repeat.rs  section.rs  seq.rs  stream.rs  then.rs  token.rs
sorted/: .vimrc  Cargo.toml
sorted/src/: lib.rs
syn-test/: Cargo.toml
syn-test/src/: lib.rs
