[package]
name = "derive_builder"
version = "0.0.0"
autotests = false
edition = "2021"
publish = false

[lib]
proc-macro = true

[[test]]
name = "tests"
path = "tests/progress.rs"

[dev-dependencies]
trybuild = { version = "1.0.49", features = ["diff"] }
prettydiff = "0.6.4"
pretty_assertions = "*"
syn = { version = "*", features = ["full", "extra-traits", "test"] }
syn-test = { path = "../syn-test" }


[dependencies]
proc-macro2 = "*"
quote = "*"
syn = "*"
