[package]
name = "seq"
version = "0.0.0"
autotests = false
edition = "2021"
publish = false

[lib]
proc-macro = true

[[test]]
name = "tests"
path = "tests/progress.rs"

[dev-dependencies]
trybuild = { version = "1.0.49", features = ["diff"] }
syn-test = { path = "../syn-test" }
pretty_assertions = "*"
syn = { version = "2.0.31", features = ["full", "extra-traits"] }

[dependencies]
syn = { version = "2.0.31", features = ["full"] }
quote = "*"
proc-macro2 = "*"
